Fix the horizontal alignment of the images and center the search section.

--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,49 @@
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-header {
-    background-image: url('https://images.unsplash.com/photo-1544829728-e5cb9eedc20e?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
-    min-height: 800px;
+html,
+body {
+  margin: 0;
+  overflow-x: hidden;
+}
 
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+.search-bar {
+  background-image: url("https://images.unsplash.com/photo-1563974318767-a4de855d7b43?q=80&w=2074&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+  min-height: 1000px;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+
+  margin: 0;
+  padding: 0;
+}
+
+.search-bar {
+  position: relative;
+}
+
+.title-search-bar {
+  position: absolute;
+  top: 120px;
+  left: 30%;
+  font-size: 50pt;
+}
+
+#input-bar {
+  margin: 20% 22%;
+  width: 60%;
+  height: 80px;
+  border: 3px solid white;
+  border-radius: 15px;
+  padding: 10px;
+  opacity: 0.7;
 }
 
 main {
-    background-image: url('https://images.unsplash.com/reserve/m6rT4MYFQ7CT8j9m2AEC_JakeGivens%20-%20Sunset%20in%20the%20Park.JPG?q=80&w=2074&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D') ;
+  background-image: url("https://images.unsplash.com/photo-1419833173245-f59e1b93f9ee?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+  background-position: center;
+  background-repeat: no-repeat;
 }
